readme and input config

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ docker.enabled = true
 
 params {
     outdir              = "./outputs"
-    alignments          = "TEST/*.ba{m,i}"
+    alignments          = "TEST/*.{bam,bai}"
     mt_reference        = "rCRS"
     ref_fasta           = ""
 
