remove hardcoded default

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,8 +2,8 @@ process.container = 'bendda/mitopy:latest'
 docker.enabled = true
 
 params {
+    alignments          = null
     outdir              = "./outputs"
-    alignments          = "TEST/*.{bam,bai}"
     mt_reference        = "rCRS"
     ref_fasta           = ""
 
