fix reference genome

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ params {
     alignments          = null
     outdir              = "./outputs"
     mt_reference        = "rCRS"
-    ref_fasta           = ""
+    reference_fa        = null
 
     help                = false
    
