disable coverage ouptuts

--- a/nextflow.config
+++ b/nextflow.config
@@ -64,7 +64,7 @@ process {
 
     withName: GET_COVERAGE {
         publishDir = [
-            path: "${params.outdir}/coverage"
+            enabled: false
         ]
         memory = 1.GB
     }
